add icon box area

--- a/project.config.json
+++ b/project.config.json
@@ -18,7 +18,7 @@
         "checkInvalidKey": true,
         "checkSiteMap": true,
         "uploadWithSourceMap": true,
-        "compileHotReLoad": false,
+        "compileHotReLoad": true,
         "lazyloadPlaceholderEnable": false,
         "useMultiFrameRuntime": false,
         "useApiHook": false,
