--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,13 +2,14 @@
   "pages": [
     "pages/index/index",
     "pages/map/index",
-    "pages/activity/index"
+    "pages/activity/index",
+    "pages/product/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "特斯拉Tesla",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
