--- a/project.private.config.json
+++ b/project.private.config.json
@@ -65,6 +65,12 @@
                     "pathName": "pages/product/index",
                     "query": "id=fa24ce1a61796c0202b5d804400ec91d",
                     "scene": null
+                },
+                {
+                    "name": "预约页面",
+                    "pathName": "pages/test-drive/index",
+                    "query": "id=1",
+                    "scene": null
                 }
             ]
         }
