--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/map/index",
     "pages/activity/index",
-    "pages/product/index"
+    "pages/product/index",
+    "pages/test-drive/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
