--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/map/index",
     "pages/activity/index",
     "pages/product/index",
-    "pages/test-drive/index"
+    "pages/test-drive/index",
+    "pages/magazine/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
