--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -5,7 +5,8 @@
     "pages/activity/index",
     "pages/product/index",
     "pages/test-drive/index",
-    "pages/magazine/index"
+    "pages/magazine/index",
+    "pages/map/location"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
