--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,8 @@
     "pages/product/index",
     "pages/test-drive/index",
     "pages/magazine/index",
-    "pages/map/location"
+    "pages/map/location",
+    "pages/lenders-toolbox/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
