--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,8 @@
         "minifyWXSS": true,
         "disableUseStrict": false,
         "showES6CompileOption": false,
-        "useCompilerPlugins": false
+        "useCompilerPlugins": false,
+        "minifyWXML": true
     },
     "appid": "wx3174be5467f44d20",
     "projectname": "tesla-cloud",
