--- a/project.config.json
+++ b/project.config.json
@@ -40,9 +40,9 @@
         ],
         "minifyWXSS": true,
         "disableUseStrict": false,
+        "minifyWXML": true,
         "showES6CompileOption": false,
-        "useCompilerPlugins": false,
-        "minifyWXML": true
+        "useCompilerPlugins": false
     },
     "appid": "wx3174be5467f44d20",
     "projectname": "tesla-cloud",
