--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,7 +7,8 @@
     "pages/test-drive/index",
     "pages/magazine/index",
     "pages/map/location",
-    "pages/lenders-toolbox/index"
+    "pages/lenders-toolbox/index",
+    "pages/video/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
