feat: 活动根据位置切换信息筛选及活动列表获取

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -44,5 +44,11 @@
     "scope.userLocation": {
       "desc": "您的位置信息将用于我们的服务人员跟踪您的信息并提供更好的服务"
     }
+  },
+  "plugins": {
+    "citySelector": {
+      "version": "1.0.1",
+      "provider": "wx63ffb7b7894e99ae"
+    }
   }
 }
