--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,8 @@
     "pages/magazine/index",
     "pages/map/location",
     "pages/lenders-toolbox/index",
-    "pages/video/index"
+    "pages/video/index",
+    "pages/activity/detail"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
