--- a/project.private.config.json
+++ b/project.private.config.json
@@ -113,6 +113,12 @@
           "pathName": "pages/activity/index",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "活动详情页",
+          "pathName": "pages/activity/detail",
+          "query": "id=5026485b61a6344100ee08a427adb603",
+          "scene": null
         }
       ]
     }
