--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,7 +9,8 @@
     "pages/map/location",
     "pages/lenders-toolbox/index",
     "pages/video/index",
-    "pages/activity/detail"
+    "pages/activity/detail",
+    "pages/activity/apply"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
