--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -10,7 +10,8 @@
     "pages/lenders-toolbox/index",
     "pages/video/index",
     "pages/activity/detail",
-    "pages/activity/apply"
+    "pages/activity/apply",
+    "pages/discovery/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -23,7 +24,12 @@
     "color": "#c3c3c3",
     "selectedColor": "#1b1b1b",
     "borderStyle": "white",
-    "list": [{
+    "list": [ {
+      "iconPath": "images/nav/discovery.png",
+      "selectedIconPath": "images/nav/discovery_select.png",
+      "pagePath": "pages/discovery/index",
+      "text": "发现"
+    },{
       "pagePath": "pages/index/index",
       "iconPath": "images/nav/car.png",
       "selectedIconPath": "images/nav/car_select.png",
