--- a/project.private.config.json
+++ b/project.private.config.json
@@ -125,6 +125,12 @@
           "pathName": "pages/activity/apply",
           "query": "id=5026485b61a6344100ee08a427adb603",
           "scene": null
+        },
+        {
+          "name": "pages/discovery/index",
+          "pathName": "pages/discovery/index",
+          "query": "",
+          "scene": null
         }
       ]
     }
