--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,7 +11,9 @@
     "pages/video/index",
     "pages/activity/detail",
     "pages/activity/apply",
-    "pages/discovery/index"
+    "pages/discovery/index",
+    "pages/article/detail",
+    "pages/article/channel"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
