--- a/project.private.config.json
+++ b/project.private.config.json
@@ -137,6 +137,12 @@
           "pathName": "pages/article/detail",
           "query": "id=c462c81061ae148b00d36709255b4fb1",
           "scene": null
+        },
+        {
+          "name": "频道页",
+          "pathName": "pages/article/channel",
+          "query": "id=0448022461ae144900d7669b12ade68f",
+          "scene": null
         }
       ]
     }
